<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LotoNaviDroid</string>
    <string name="title_activity_andro_lot">LotoNaviDroid</string>
    
    <string name="main_text_christmas_string">Sorteo de Navidad</string>
    <string name="main_text_kid_string">Sorteo del Niño</string>
    
    <string name="main_btn_numero_string">Mis números</string>
    <string name="main_btn_resumen_string">Resumen de premios</string>
    <string name="consulta_numero_elemento_numero_string">Número</string>
    <string name="consulta_numero_elemento_cantidad_string">Cantidad</string>
    <string name="consulta_numero_elemento_premio_string">Premio</string>
    <string name="check_prices_string">Comprobar premios</string>
    <string name="checking_prices_string">Comprobando premios&#8230;</string>
    <string name="aniadir_numero_string">+</string>
    <string name="aniadir_numero_cantidad_string">cantidad</string>
    <string name="aniadir_numero_numero_string">número</string>
    <string name="error_aniadir_numero_string">Introduce número y cantidad</string>
    <string name="titulo_premios_string">Premios</string>
    <string name="premio_gordo_string">Gordo</string>
    <string name="premio_gordo_string_2">(400.000€ al décimo)</string>
    <string name="premio_gordo_string_amount">400.000€</string>
    <string name="premio_2_string">Segundo premio</string>
    <string name="premio_2_string_2">(125.000€ al décimo)</string>
    <string name="premio_2_string_amount">125.000€</string>
    <string name="premio_3_string">Tercer premio</string>
    <string name="premio_3_string_2">(50.000€ al décimo)</string>
    <string name="premio_3_string_amount">50.000€</string>
    <string name="premio_4_string">Cuartos premios</string>
    <string name="premio_4_string_2">(20.000€ al décimo)</string>
    <string name="premio_4_string_amount">20.000€</string>
    <string name="premio_5_string">Quintos premios</string>
    <string name="premio_5_string_2">(6.000€ al décimo)</string>
    <string name="premio_5_string_amount">6.000€</string>

    <string name="androlot_service">androlot_service</string>
    
    <string name="bottom_text">Datos proporcionados por elpais.es</string>
    <string name="my_numbers_title">Mis números</string>
    <string name="checking_prices">Consultando números premiados&#8230;</string>
    <string name="game_monitor">Monitorizar Sorteo</string>
    
    <string name="service_on_text">Deneter monitorizar sorteo</string>
    <string name="service_off_text">Monitorizar sorteo</string>
    
    <string name="help_text">Ayuda</string>
    <string name="help_layout_my_numbers_text">En \"Mis números\" podrás ver y guardar los números a los que juegas y consultar si han sido premiados.</string>
    <string name="help_layout_resume_text">En \"Resumen de premios\" podrás ver una lista con los premios más importantes.</string>
    <string name="help_layout_service_text">Activando la opción \"Monitorizar Sorteo\" activarás una función que te mostrará una notificación sí alguno de tus números guardados recibe un premio.\nEsta funcionalidad no se activará hasta la fecha de incio del sorteo y se detendrá automáticamente cuando finalice.</string>
	<string name="euro">€</string>
	<string name="donnate">&lt;br/&gt;Comparte tu suerte, elige una ONG y ayuda &lt;a href=\"http://www.guiaongs.org\"&gt;http://www.guiaongs.org&lt;/a&gt;</string>
	<string name="my_number_play">Juegas &lt;b&gt;%s€&lt;/b&gt; al número </string>
	<string name="my_number_win">&lt;b&gt;Has ganado %s€&lt;/b&gt;</string>
	<string name="my_number_no_price">No hay premio</string>
    <string name="notification_title">NaviLotoDroid</string>
    <string name="notification_start_game">Empieza el concurso y la monitorización de premios</string>
    <string name="notification_game_price_title">Aviso de Premio</string>
    <string name="notification_game_price_text" formatted="false">Tu numero %s ha sido premiado con %s€</string>
    
    <string name="kid_first_prize_title">Primer premio</string>
    <string name="kid_first_prize_title_2">(200.000€ al décimo)</string>
    <string name="kid_special_fraccion_serie_title">Premio especial</string>
    <string name="kid_special_fraccion_serie_title_2">(40.000.000€ al décimo)</string>
    <string name="kid_special_fraccion_serie_text" formatted="false">Fracción: %s | Serie: %s</string>
        
    <string name="kid_second_prize_title">Segundo premio</string>
    <string name="kid_second_prize_title_2">(75.000€ al décimo)</string>
    <string name="kid_3_prize_title">Tercer premio</string>
    <string name="kid_3_prize_title_2">(25.000€ al décimo)</string>
    <string name="kid_special_3_prizes_title">Extracciones 3 cifras</string>
    <string name="kid_special_3_prizes_title_2">(100€ al décimo)</string>
    <string name="kid_special_2_prizes_title">Extracciones 2 cifras</string>
    <string name="kid_special_2_prizes_title_2">(40€ al décimo)</string>
    <string name="kid_r_prizes_title">Reintegros</string>
    <string name="kid_r_prizes_title_2">(20€ al décimo)</string>
    
    <string name="kid_first_prize_amount_2">200.000€</string>
    <string name="kid_special_fraccion_serie_amount">40.000.000€</string>
    <string name="kid_second_prize_amount_2">75.000€</string>
    <string name="kid_3_prize_amount_2">25.000€</string>
    <string name="kid_special_3_prizes_amount_2">100€</string>
    <string name="kid_special_2_prizes_amount_2">40€</string>
    <string name="kid_r_prizes_amount_2">20€</string>
    
    <string name="my_number_time_checked">Última comprobación a las &lt;b&gt;%s€&lt;/b&gt;</string>
    
    <string name="service_scheduled" formatted="false">Seguimiento de sorteo programado a fecha de %s.\nSí ha apagado el dispositivo desde entonces, vuelva a programarlo.</string>
    
</resources>